--- a/my-fs-frontend/package.json
+++ b/my-fs-frontend/package.json
@@ -12,11 +12,14 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "bulma": "^0.9.3",
+    "bulma-toast": "^2.4.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-fa-icon": "^0.1.4",
     "react-scripts": "4.0.3",
+    "sass": "^1.43.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
