--- a/my-fs-frontend/package.json
+++ b/my-fs-frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-fa-icon": "^0.1.4",
     "react-scripts": "4.0.3",
     "sass": "^1.43.4",
